fix: wrap long words in modal grid

--- a/src/aimtl-landscape.css
+++ b/src/aimtl-landscape.css
@@ -348,6 +348,19 @@ Modal
 #modal-grid div {
     background-color: white;
     padding: 0.5rem;
+
+    /* These are technically the same, but use both */
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    -ms-word-break: break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    hyphens: auto;
 }
 
 .close {
